Made some revisions based on understandability metric

--- a/docs/sprint2/revised-requirements.tex
+++ b/docs/sprint2/revised-requirements.tex
@@ -4,7 +4,7 @@
 
 \begin{document}
 
-\section*{Detailed Requirements (baselined version)}
+\section*{Detailed Requirements (revised version)}
 
 \begin{easylist}[articletoc]
 @ Upon logging in, the service shall display the home page.
@@ -29,7 +29,7 @@
 @@@@ The current date and time according to the clock of the machine on which the server is running.
 @@ After the document is inserted into the database, the user shall be directed to the home page and the following message shall be displayed above the Drip Creation form: ``Your drip was saved!''
 @ The home page shall display a list of buckets to the user. This list shall be termed the Bucket List.
-@@ The Bucket List will be a list of buttons for a specific bucket.
+@@ The Bucket List will be a list of buttons each for a specific bucket.
 @@ Clicking on the bucket button will take the user to that bucket’s page.
 @ Data Requirements
 @@ The service shall enforce the following form field requirements.
