Commented on lack of field names

--- a/docs/sprint2/revised-requirements.tex
+++ b/docs/sprint2/revised-requirements.tex
@@ -38,6 +38,12 @@
 @@@@ The drip text shall include any hashtag identifiers of specified buckets in the 160 character limit.
 @@ The service shall store its data in a MongoDB database.
 @@@ The database shall have a \texttt{drips} collection to store drip data.
+% Russ, we should probably include the field names in the requirements in the future. 
+% Otherwise, we might run into inconsistencies in our design artifacts in how we name
+% things.
+% If you want to specify names for this sprint, make changes to this file, not the 
+% baselined requirements. I think the field names would be added to this section rather
+% than the section above, since this section is about the data requirements.
 @@@ The \texttt{drips} collection shall have fields for storing the respective form field values in Section \ref{field-list}.
 
 \end{easylist}
