--- a/docs/sprint2/revised-requirements.tex
+++ b/docs/sprint2/revised-requirements.tex
@@ -18,6 +18,7 @@
 @@@ The service shall scan the drip text for a hashtag symbol (\#). For each occurrence of the hashtag symbol (\#), the service shall determine a bucket name.
 @@@@ The service shall read the text string that begins with the character immediately following said hashtag symbol and ends with either (1) the character immediately before the first whitespace character (including a space or newline) following said hashtag symbol, (2) the character immediately before the next hashtag symbol (\#) following said hashtag symbol, or (3) the last character of the drip text, whichever appears first. This text string shall be the bucket name for said hashtag symbol.
 @@@@ \label{bucket-name-array}The service shall store the set of bucket name(s) to which said drip belongs as string(s) in an array. This array shall hereafter be referred to as the ``bucket-name array.''
+@@@ The service shall prevent duplicate bucket names in the ``bucket-name array.'' Two bucket names are duplicates if a case-sensitive comparison between their text strings considers them to be equivalent.
 @@@ If a hashtag symbol (\#) appears but is immediately followed with a whitespace character, the service shall not consider said hashtag symbol as specifying a bucket.
 @@@ If a hashtag symbol (\#) appears as the last character of the drip text, the service shall not consider said hashtag symbol as specifying a bucket.
 @@@ \label{no-bucket-error}If no hashtag symbol (\#) specifying a bucket appears in the drip text, the service shall prevent the user from submitting the drip and shall display the following error message to the user: ``No bucket specified. Please specify a bucket for this drip by using the hashtag symbol (\#).''
