Added requirements for anonymity

--- a/docs/sprint3/baselined-requirements.tex
+++ b/docs/sprint3/baselined-requirements.tex
@@ -18,6 +18,11 @@
 @@@ A drip shall include the drip text and the date and time that the drip was created.
 @@@@ If the drip is not anonymous, the name of the drip's author shall be displayed with the drip text.
 @@@ If no drip belongs in the drip list as per Section~\ref{drip-list-belonging}, the page shall display the following message: ``This bucket has no drips.''
+@ The user will have an option of choosing whether the drips will show the username while being displayed in the respective bucket page(s), or not.
+@@ The user can choose anonymity while creating a new drip by checking the checkbox labelled \textit{Make Anonymous}.
+@@@ The \textit{Make Anonymous} checkbox will be unchecked by default.
+@@ Drips which are chosen to be anonymous, will not have any username displayed when viewed in their respective bucket page(s).
+@@ Anonymous drips will still be associated with their respective username in the database but will not show them in the bucket page.
 
 \end{easylist}
 \end{document}
