Revised requirements for logout button

--- a/docs/sprint3/baselined-requirements.tex
+++ b/docs/sprint3/baselined-requirements.tex
@@ -23,6 +23,9 @@
 @@@ The \textit{Make Anonymous} checkbox will be unchecked by default.
 @@ Drips which are chosen to be anonymous, will not have any username displayed when viewed in their respective bucket page(s).
 @@ Anonymous drips will still be associated with their respective username in the database but will not show them in the bucket page.
+@ The user will have the option to logout of the webpage via a \textit{logout button}.
+@@ When the user clicks the \textit{logout button}, the user will be directed to the \textit{intro page}.
+@@ The \textit{logout button} will be visable at the top of the page on the \textit{home page} and also the \textit{bucket page}.
 
 \end{easylist}
 \end{document}
