--- a/docs/sprint3/revised-requirements.tex
+++ b/docs/sprint3/revised-requirements.tex
@@ -19,10 +19,12 @@
 @@@@ If the drip is not anonymous, the name of the drip's author shall be displayed with the drip text.
 @@@ If no drip belongs in the drip list as per Section~\ref{drip-list-belonging}, the page shall display the following message: ``This bucket has no drips.''
 @ The user will have an option of choosing whether the drips will show the username while being displayed in the respective bucket page(s), or not.
-@@ The user can choose anonymity while creating a new drip by checking the checkbox labelled \textit{Make Anonymous}.
+@@ The user can choose anonymity while creating a new drip by checking the checkbox labeled \textit{Make Anonymous}.
 @@@ The \textit{Make Anonymous} checkbox will be unchecked by default.
-@@ Drips which are chosen to be anonymous, will not have any username displayed when viewed in their respective bucket page(s).
-@@ Anonymous drips will still be associated with their respective username in the database but will not show them in the bucket page.
+@@ The \texttt{Drip} model shall have a field named \texttt{anonymous} of data type \texttt{Boolean}.
+@@@ If a drip is anonymous, the drip's \texttt{anonymous} field shall be set to \texttt{true}; otherwise, the \texttt{anonymous} field shall be set to \texttt{false}.
+@@ An anonymous drip shall not have any username displayed when viewed in its respective bucket page(s).
+@@ An anonymous drip will still be associated with its respective username in the database but will not show the username in the bucket page.
 @ The user will have the option to logout of the webpage via a \textit{logout button}.
 @@ When the user clicks the \textit{logout button}, the user will be directed to the \textit{intro page}.
 @@ The \textit{logout button} will be visable at the top of the page on the \textit{home page} and also the \textit{bucket page}.
